@@ -1,0 +1,46 @@
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man
+.TH KITEOHEDRON  "1" " " "kiteohedron Antiprism 0.22.pre01 - http://www.antiprism.com" "User Commands"
+.SH NAME
+kiteohedron - kite-faced polyhedra
+.SH SYNOPSIS
+.B kiteohedron
+[\fIoptions\fR] \fIfrac_A frac_B \fR[\fIfrac_C\fR]
+.SH DESCRIPTION
+The three fractions A, B, C (default 2) specifying the Schwarz triangle
+vertices, where n/d corresponds to an angle PI*d/n. The kite has vertices
+along A, C, B, and C reflected in AB. The kite is repeated with the
+symmetry corresponding to the base Schwarz triangle.
+.PP
+Options
+.TP
+\fB\-h\fR
+this help message
+.TP
+\fB\-l\fR ht
+height of kite vertex on OA (cannot use with \fB\-p\fR))
+.TP
+\fB\-p\fR ht
+height of pivot, midpoint of C and C reflected in AB (cannot
+use with \fB\-l\fR))
+.TP
+\fB\-k\fR
+output a single kite (colours not applied)
+.TP
+\fB\-c\fR type
+colour the faces around each vertex of a type, from AaBbCc
+(colouring by value/index for upper/lower case) using a
+different colour for each set
+.HP
+\fB\-o\fR <file> write output to file (default: write to standard output)
+.SH "SEE ALSO"
+The full documentation for
+.B kiteohedron
+is maintained as a Texinfo manual.  If the
+.B info
+and
+.B kiteohedron
+programs are properly installed at your site, the command
+.IP
+.B info kiteohedron
+.PP
+should give you access to the complete manual.
